# microblog-service

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 63fac8a08259_add_test_data.py  9b9fdca32c17_initial_migration.py
src/microblog/: app.py  config.py  logger.py  main.py
src/microblog/api/: dependencies.py  routes.py  schemas.py
src/microblog/core/: database.py  lifespan.py
src/microblog/db/: base.py  models.py
src/microblog/repositories/: interfaces.py  repository.py
src/microblog/services/: media_service.py  tweet_service.py  user_service.py
static/css/: app.45d81840.css  chunk-6f77c742.8d9a3d9c.css
static/js/: chunk-732a3e8c.57e36fb4.js  chunk-732a3e8c.57e36fb4.js.map
tests/: conftest.py  test_medias.py  test_tweets.py  test_users.py
