[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microblog"
version = "1.0.0"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.mypy]
python_version = "3.12"
warn_return_any = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "alembic.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
max-complexity = 10

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false